k8s/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rh-server
  namespace: rh
  labels:
    app: rh-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rh-server
  template:
    metadata:
      labels:
        app: rh-server
    spec:
      containers:
        - name: rh-server
          image: leokaos/rh_server:1.0
          ports:
            - containerPort: 8080
