k8s/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: rh
  labels:
    app: client
spec:
  containers:
    - name: server
      image: leokaos/rh_client:2.0
      ports:
        - name: client
          containerPort: 4200
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: rh  
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
