k8s/kafka.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafka
  namespace: rh
  labels:
    app: kafka
spec:
  containers:
    - name: kafka
      image: wurstmeister/kafka
      ports:
        - name: kafka
          containerPort: 9092
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: rh  
spec:
  selector:
    app: kafka
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
