k8s/ldap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ldap
  namespace: rh
  labels:
    app: ldap
spec:
  containers:
    - name: ldap
      image: dinkel/openldap
      ports:
        - name: ldap
          containerPort: 389
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: ldap-service
  namespace: rh  
spec:
  selector:
    app: ldap
  ports:
    - protocol: TCP
      port: 389
      targetPort: 389
