k8s/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: rh
  labels:
    app: redis
spec:
  containers:
    - name: redis
      image: redis:latest
      ports:
        - name: redis
          containerPort: 6379
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: rh  
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
