k8s/server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: server
  namespace: rh
  labels:
    app: server
spec:
  containers:
    - name: server
      image: leokaos/rh_server:2.0
      ports:
        - name: server
          containerPort: 8090
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: rh  
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
