k8s/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: rh-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
