k8s/zookeeper.yaml
apiVersion: v1
kind: Pod
metadata:
  name: zookeeper
  namespace: rh
  labels:
    app: zookeeper
spec:
  containers:
    - name: zookeeper
      image: wurstmeister/zookeeper
      ports:
        - name: zookeeper
          containerPort: 2181
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  namespace: rh  
spec:
  selector:
    app: zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
