k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-rh
  namespace: rh
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /secure
        backend:
          serviceName: server-service
          servicePort: 8080
      - path: /
        backend:
          serviceName: client-service
          servicePort: 4200
